--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>My Page</title>
+	<link rel="stylesheet" type="text/css" href="css/fiver.css">
 </head>
 <body>
 
@@ -28,12 +29,12 @@
         <h2>links</h2>
 
         <p>Here i will show u i can place links these links can be what ever you want them to be for example: your youtube; your twitch; your instagram; your twitter or anything else you want!</p>
-        <ol>
+        <ul>
             <li><a target="_blank" href="https://youtube.com">Youtbe</a></li>
             <li><a target="_blank" href="https://twitch.tv">Twich</a></li>
             <li><a target="_blank" href="https://instagram.com">Instagram</a></li>
             <li><a target="_blank" href="https://twitter.com">Twitter</a></li>
-        </ol>
+        </ul>
 
         <h2>What can it be about?</h2>
 
